made most of the to-do app

--- a/html/to-do/index.html
+++ b/html/to-do/index.html
@@ -12,7 +12,7 @@
     <article>
         <h2>Tasks List</h2>
         <ol id="tasks-list"></ol>
-        <div>
+        <div class="task-input-container">
             <input id="add-task-textbox" placeholder="Enter Task... " type="text"><br>
             <button id="add-task-button" onclick="addTask()">Add</button>
         </div>
