added typewriter effect

--- a/html/portfolio/index.html
+++ b/html/portfolio/index.html
@@ -23,7 +23,7 @@
     <article>
         <section class="welcome-section">
             <div>
-                <h2 >An Enthusiast In Programming</h2>
+                <h2 >I am a <span class="animated-text"></span></h2>
              <p>I used to make games and programs in leisure time.
             <br> <strong>Inforamtion Technology</strong> has always been a go-to for me since childhood.
             </p>
@@ -106,17 +106,17 @@
        <section class="projects-section">
         <h3>Projects</h3>
         <ol>
-            <li>   
+            <li class="hidden">   
             <h4>Project 1</h4>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At inventore, itaque dolor tempore similique cumque cum sint ipsa modi, commodi labore, explicabo animi fuga eaque accusantium odio? Velit, exercitationem voluptates!</p>
             </li>
        
-            <li>   
+            <li class="hidden">   
             <h4>Project 2</h4>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At inventore, itaque dolor tempore similique cumque cum sint ipsa modi, commodi labore, explicabo animi fuga eaque accusantium odio? Velit, exercitationem voluptates!</p>
             </li>
         
-            <li>   
+            <li class="hidden">   
             <h4>Project 2</h4>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At inventore, itaque dolor tempore similique cumque cum sint ipsa modi, commodi labore, explicabo animi fuga eaque accusantium odio? Velit, exercitationem voluptates!</p>
             </li>
