--- a/html/portfolio/index.html
+++ b/html/portfolio/index.html
@@ -28,7 +28,9 @@
             <br> <strong>Inforamtion Technology</strong> has always been a go-to for me since childhood.
             </p>
         </div>
-            <div class="img-pfp"></div>
+            <div class="img-pfp">
+                
+            </div>
         </section>
 
         <section class="education-section">
